--- a/app/src/main/res/layout/activity_bieudo_sinhvienvang.xml
+++ b/app/src/main/res/layout/activity_bieudo_sinhvienvang.xml
@@ -70,10 +70,14 @@
             android:layout_below="@id/textViewNgay2"
             android:layout_centerHorizontal="true" />
 
-        <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/pieChart_SVVang"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/barChart_SVVang"
+            android:layout_width="356dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
             android:layout_weight="1" />
     </LinearLayout>
 
