--- a/app/src/main/res/layout/activity_chinh_sua_mon_hoc.xml
+++ b/app/src/main/res/layout/activity_chinh_sua_mon_hoc.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="right"
-        android:text="CHỈNH SỬA\n ĐIỂM SINH VIÊN"
+        android:text="CHỈNH SỬA\n MÔN HỌC "
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold" />
